force-app/main/default/objects/Loan_History_Track__c/Loan_History_Track__c.object-meta.xml
<CustomObject>
    <label>Loan History Track</label>
    <nameField>
        <displayFormat>LHT-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan History Track</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>