force-app/main/default/objects/Loan_History_Track__c/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <label>New Value</label>
    <length>90</length>
    <type>Text</type>
</CustomField>