force-app/main/default/objects/Loan_History_Track__c/fields/OldValue__c.field-meta.xml
<CustomField>
    <fullName>OldValue__c</fullName>
    <label>Old Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>